# lovable-followup-agent

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  PLAN.md  PRD.md  README.md  STATUS.md  config.example.toml  pyproject.toml  test_dedup.py  사용자 관점 문제사항.md  사용자 관점 문제사항.txt  진행상황 보고.md  진행상황 보고.txt  회의_요약.md
.claude/commands/: goal.md
lovable_agent/: __init__.py  __main__.py  config.py  domain.py  main.py
lovable_agent/ingest/: __init__.py  kakao_parser.py  notion_poller.py  txt_watcher.py
lovable_agent/output/: __init__.py  detection.py  hwnd_utils.py  kakao_sender.py  notifier.py  screenshot.py  send_dispatcher.py  window_spec.py
lovable_agent/output/steps/: __init__.py  base.py  ensure_friends_tab.py  open_chatroom.py  press_enter.py  snapshot_hwnds.py  type_message.py  verify_chatroom_title.py
lovable_agent/process/: __init__.py  anthropic_client.py  claude_cli_client.py  extractor.py  llm_client.py  mock_client.py  ollama_client.py
lovable_agent/safety/: __init__.py  prefix.py  whitelist.py
lovable_agent/scheduling/: __init__.py  scheduler.py
lovable_agent/storage/: __init__.py  mock_notion_repo.py  notion_repo.py  repository.py  sqlite_repo.py
lovable_agent/storage/migrations/: 001_initial.sql  002_processed_messages.sql
scripts/: analyze_kakao.py  check_ollama.py  e2e_test.py  install_startup.py  integration_e2e.py  integration_inbox_e2e.py  investigate.py  send_test.py  setup_notion.py
tests/: test_claude_cli_client.py  test_extractor.py  test_hwnd_utils.py  test_kakao_parser.py  test_kakao_sender.py  test_notion_repo.py  test_ollama_client.py  test_scheduler.py  test_send_dispatcher.py  test_smoke.py  test_sqlite_repo.py  test_steps.py  test_watcher_and_notifier.py  test_whitelist.py  test_window_spec.py
