[project]
name = "lovable-followup-agent"
version = "0.1.0"
description = "Lovable 팀 매니저용 업무 팔로업 AI 에이전트 — 카톡 분석·노션 통합·자동 리마인드 (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "lsjman13-create" },
]
dependencies = [
    # AI
    "anthropic>=0.40.0",
    # Notion
    "notion-client>=2.2.1",
    # 카톡 자동화 (Phase 2 이후 실제 사용)
    "pywin32>=308; sys_platform == 'win32'",
    "uiautomation>=2.0; sys_platform == 'win32'",
    # 폴더 감시
    "watchdog>=4.0.0",
    # 스케줄러
    "apscheduler>=3.10.4",
    # 스크린샷
    "pillow>=10.0.0",
    # 데스크톱 알림 (Windows)
    "winotify>=1.1.0; sys_platform == 'win32'",
]

[project.scripts]
lovable-agent = "lovable_agent.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lovable_agent"]

# ──────────────────────────────────────────────────────────────
# ruff — lint + format 통합 도구
# ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import 정렬)
    "B",      # flake8-bugbear (흔한 버그 잡기)
    "UP",     # pyupgrade (구식 문법 모던화)
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (포매터가 처리)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
